<resources>
    <string name="app_name">My Apps Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="pop_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="make_app_material">Make Your App Material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
